section_footer_added

--- a/index.html
+++ b/index.html
@@ -36,29 +36,30 @@
 	
 				<!-- ABOUT SECTION -->
 	<span class="anchor" id="about"></span>
-	<section>
-		<div class="background">
-			<div class="row">
+		<section>
+			<div class="background">
+				<div class="row">
 
-				<div class="col-md-12">
-					<h2 class="infoHeader">
-						About
-					</h2>
-				</div>
+					<div class="col-md-12">
+						<h2 class="infoHeader">
+							About
+						</h2>
+					</div>
 
-				<div class="col-md-12">
-					<div class="container">
-						<p>
-							<img src="" alt=""> Qian Info
-						</p>
+					<div class="col-md-12">
+						<div class="container">
+							<p>
+								<img src="" alt=""> Qian Info
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 	
 				<!-- WORK SECTION -->
-	<span class="anchor" id="work">
+	<span class="anchor" id="work"></span>
+
 		<section>
 			<div class="transparentBackground">
 				<div class="row">
@@ -70,8 +71,33 @@
 				</div>
 			</div>
 		</section>
-	</span>
 
+	
+	<span class="anchor" id="contact"></span>
+		<section>
+			<div class="background">
+				<div class="row">
+					<div class="col-md-12">
+						<h2 class="infoHeader">
+							Contact
+						</h2>
+						<!--  Linkindin -->
+						<a href="#"></a>
+						<!-- Github -->
+						<a href="#"></a>
+						<!-- Resume -->
+						<a href="#"></a>
+						<!-- Email -->
+						<a href="#"></a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+	<footer>
+		@Copyright Qian 2018
+	</footer>
 
 	<!-- bootstrap js -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
