--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- my own css -->
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body data-spy="scroll" data-target="#navbarSupportedContent" data-offset="50">
+<body data-spy="scroll" data-target="#navbarSupportedContent">
 	
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="myNav">
 		<div class="container-fluid">
@@ -23,7 +23,7 @@
 		  <div class="d-flex justify-content-end" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item">
-		        <a class="nav-link" href="#about">About Me</a>
+		        <a class="nav-link" href="#about">About</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#work">Work</a>
@@ -33,6 +33,13 @@
 
 		</div>
 	</nav>
+
+	<header>
+		<p>
+			HI, I'm Qiand. I'm a passionate IOS developer >:D
+		</p>
+	</header>
+
 	
 				<!-- ABOUT SECTION -->
 	<span class="anchor" id="about"></span>
@@ -45,13 +52,15 @@
 							About
 						</h2>
 					</div>
+					
+					<hr>
 
 					<div class="col-md-12">
-						<div class="container">
+					<!-- 	<div class="container"> -->
 							<p>
-								<img src="./assets/img/image.png" alt=""> Qian Info
+								<img src="./assets/img/image.png" class="aboutImage"> Qian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQianInfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian Info
 							</p>
-						</div>
+						<!-- </div> -->
 					</div>
 				</div>
 			</div>
@@ -81,6 +90,7 @@
 						<h2 class="infoHeader">
 							Contact
 						</h2>
+						  <i class="fab fa-linkedin-in fa"></i>
 						<!--  Linkindin -->
 						<a href="#"></a>
 						<!-- Github -->
@@ -94,67 +104,8 @@
 			</div>
 		</section>
 	
-	<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-</div><div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-</div><div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-</div>
-
 	<footer>
-		@Copyright Qian 2018
+		<p>@Copyright Qian 2018</p>
 	</footer>
 
 	<!-- bootstrap js -->
