--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 	<title>Qian Portfolio</title>
 
+	<!-- font cdn -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+
 	<!-- boostrap css cdn -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -14,7 +17,11 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target="#navbarSupportedContent">
-	
+
+	<div id='stars'></div>
+	<div id='stars2'></div>
+	<div id='stars3'></div>
+
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="myNav">
 		<div class="container-fluid">
 
@@ -28,21 +35,42 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="#work">Work</a>
 		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#contact">Contact</a>
+		      </li>
 		    </ul>
 		  </div>
 
 		</div>
 	</nav>
 
+
 	<header>
-		<p>
-			HI, I'm Qiand. I'm a passionate IOS developer >:D
-		</p>
+<!-- 			<img src="./assets/img/headerImage.jpg" alt=""> -->
+			<nav>
+				<ul>
+					<li>
+						<a class="nav-link" href="#about">About</a>
+					</li>
+					<li>
+						<a class="nav-link" href="#work">Work</a>
+					</li>
+					<li>
+						<a class="nav-link" href="#contact">Contact</a>
+					</li>
+				</ul>
+			</nav>
+
+			<h1 class="headerTitle">
+				Hello I'm Qian
+			</h1>
+			<div class="stars"></div>
+<div class="twinkling"></div>
 	</header>
 
 	
 				<!-- ABOUT SECTION -->
-	<span class="anchor" id="about"></span>
+	<span class="topAnchor" id="about"></span>
 		<section>
 			<div class="background">
 				<div class="row">
@@ -58,7 +86,7 @@
 					<div class="col-md-12">
 					<!-- 	<div class="container"> -->
 							<p>
-								<img src="./assets/img/image.png" class="aboutImage"> Qian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQianInfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian Info
+								<img src="./assets/img/image.png" class="aboutImage"> Qian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQianInfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfosssxQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQianInfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfosssxQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQianInfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfosssxQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQianInfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfosssxQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQianInfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian InfoQian Infosssx
 							</p>
 						<!-- </div> -->
 					</div>
@@ -72,12 +100,29 @@
 		<section>
 			<div class="transparentBackground">
 				<div class="row">
+
 					<div class="col-md-12">
 						<h2 class="infoHeader2">
 							Work
 						</h2>
 					</div>
-				</div>
+
+					<div class="col-md-12">
+						<div class="container">
+							<div class="row">
+								<!-- PROJECT IMAGE -->
+								<div class="col-md-6">
+									Image
+								</div>
+								<!-- PROJECT DESCRIPTION -->
+								<div class="col-md-6">
+									Description
+								</div>
+							</div><!--  row -->
+						</div> <!-- container -->
+					</div><!--  col-md-12 -->
+
+				</div> <!-- row -->
 			</div>
 		</section>
 
@@ -90,22 +135,46 @@
 						<h2 class="infoHeader">
 							Contact
 						</h2>
-						  <i class="fab fa-linkedin-in fa"></i>
-						<!--  Linkindin -->
-						<a href="#"></a>
-						<!-- Github -->
-						<a href="#"></a>
-						<!-- Resume -->
-						<a href="#"></a>
-						<!-- Email -->
-						<a href="#"></a>
+							<div class="row">
+									<!--  Linkindin -->
+									<div class="col-md-3">
+										<a href="#">
+											<i class="fab fa-linkedin-in fa-4x sr-contact"></i>
+										</a>
+										<p class="iconText">Linkindin</p>									
+									</div>
+									<!-- Github -->
+									<div class="col-md-3">
+										<a href="#">
+											<i class="fab fa-github-alt fa-4x sr-contact"></i>
+										</a>
+										<p class="iconText">Github</p>
+									</div>
+									
+									<!-- Resume -->
+									<div class="col-md-3">
+										<a href="#">
+											<i class="fab fa-google-drive fa-4x sr-contact"></i>
+										</a>
+										<p class="iconText">Resume</p>
+									</div>
+									<!-- Email -->
+									<div class="col-md-3">
+										<a href="#">
+											<i class="fas fa-envelope fa-4x sr-contact"></i>
+										</a>
+										<p class="iconText">Email</p>
+									</div>
+
+							</div>
+
 					</div>
 				</div>
 			</div>
 		</section>
 	
 	<footer>
-		<p>@Copyright Qian 2018</p>
+		@Copyright Qian 2018
 	</footer>
 
 	<!-- bootstrap js -->
