--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- my own css -->
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body data-spy="scroll" data-target="#navbarSupportedContent">
+<body data-spy="scroll" data-target="#navbarSupportedContent" data-offset="0">
 
 	<div id='stars'></div>
 	<div id='stars2'></div>
@@ -48,16 +48,16 @@
 	<header>
 <!-- 			<img src="./assets/img/headerImage.jpg" alt=""> -->
 			<nav>
-				<ul>
-					<li>
-						<a class="nav-link" href="#about">About</a>
-					</li>
-					<li>
-						<a class="nav-link" href="#work">Work</a>
-					</li>
-					<li>
-						<a class="nav-link" href="#contact">Contact</a>
-					</li>
+				<ul class="nav justify-content-center">
+				  <li class="nav-item">
+				    <a class="nav-link active" href="#about">About</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="#work">Work</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="#contact">Contact</a>
+				  </li>
 				</ul>
 			</nav>
 
@@ -112,7 +112,32 @@
 							<div class="row">
 								<!-- PROJECT IMAGE -->
 								<div class="col-md-6">
-									Image
+									<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+									  <ol class="carousel-indicators">
+									    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+									    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+									    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+									  </ol>
+									  <div class="carousel-inner">
+									    <div class="carousel-item active">
+									      <img class="d-block w-100" src="https://vignette.wikia.nocookie.net/sonicpokemon/images/e/e0/Charmander_AG_anime.png/revision/latest?cb=20130714191911" alt="First slide">
+									    </div>
+									    <div class="carousel-item">
+									      <img class="d-block w-100" src="https://vignette.wikia.nocookie.net/erbofsmoshery/images/3/35/Squirtle_Based_On.png/revision/latest?cb=20170329193756" alt="Second slide">
+									    </div>
+									    <div class="carousel-item">
+									      <img class="d-block w-100" src="https://usercontent2.hubstatic.com/13805615_f520.jpg" alt="Third slide">
+									    </div>
+									  </div>
+									  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+									    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									    <span class="sr-only">Previous</span>
+									  </a>
+									  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+									    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+									    <span class="sr-only">Next</span>
+									  </a>
+									</div>
 								</div>
 								<!-- PROJECT DESCRIPTION -->
 								<div class="col-md-6">
